--- a/.github/workflows/selenium-test.yml
+++ b/.github/workflows/selenium-test.yml
@@ -7,6 +7,9 @@ on:
     branches: [ "main" ]
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   runAutomation:
     runs-on: ubuntu-latest
